@@ -36,6 +36,7 @@
 
 
 require "___scriptsdir___/general.pl";
+require "___scriptsdir___/platform.pl";
 require "___scriptsdir___/util.pl";
 require "___scriptsdir___/file.pl";
 require "___scriptsdir___/xml.pl";
@@ -47,6 +48,7 @@ $DEBUG = 1; # 1 == command; no debug. 2 == no commands, just report. 3 == report
 
 $name = "memory";
 $version = "0.1.0";
+@platforms = ("redhat-5.2", "redhat-6.0", "redhat-6.1", "redhat-6.2", "redhat-7.0");
 
 $description =<<"end_of_description;";
        Configures main and swap memory.
@@ -565,7 +567,8 @@ sub filter
 
 # --- Main --- #
 
-xst_init($name, $version, $description, @ARGV);
+&xst_init ($name, $version, $description, @ARGV);
+&xst_platform_ensure_supported (@platforms);
 
 # Do our thing.
 
