@@ -42,6 +42,7 @@
 
 
 require "___scriptsdir___/general.pl";
+require "___scriptsdir___/platform.pl";
 require "___scriptsdir___/util.pl";
 require "___scriptsdir___/file.pl";
 require "___scriptsdir___/xml.pl";
@@ -52,6 +53,7 @@ require "___scriptsdir___/network.pl";
 
 $name = "network";
 $version = "0.1.0";
+@platforms = ("redhat-5.2", "redhat-6.0", "redhat-6.1", "redhat-6.2", "redhat-7.0");
 
 $description =<<"end_of_description;";
        Configures all network parameters and interfaces.
@@ -462,6 +464,7 @@ sub filter
 # --- Main --- #
 
 &xst_init ($name, $version, $description, @ARGV);
+&xst_platform_ensure_supported (@platforms);
 
 # Do our thing.
 
