@@ -50,6 +50,7 @@
 
 
 require "___scriptsdir___/general.pl";
+require "___scriptsdir___/platform.pl";
 require "___scriptsdir___/util.pl";
 require "___scriptsdir___/file.pl";
 require "___scriptsdir___/xml.pl";
@@ -61,6 +62,7 @@ require "___scriptsdir___/network.pl";
 
 $name = "shares";
 $version = "0.1.0";
+@platforms = ("redhat-5.2", "redhat-6.0", "redhat-6.1", "redhat-6.2", "redhat-7.0");
 
 $description =<<"end_of_description;";
        Configures network imports and exports.
@@ -1922,7 +1924,8 @@ sub filter
 
 # --- Main --- #
 
-xst_init($name, $version, $description, @ARGV);
+&xst_init ($name, $version, $description, @ARGV);
+&xst_platform_ensure_supported (@platforms);
 
 # Do our thing.
 
